--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
     "lint": "next lint",
     "format": "biome format --write .",
     "lint:biome": "biome lint .",
-    "check": "biome check --apply ."
+    "check": "biome check --apply .",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "biome format --write",
+      "biome lint"
+    ]
   },
   "dependencies": {
     "@prisma/client": "^6.8.2",
@@ -28,6 +35,8 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
